theme switch mode

--- a/src/assets/styles/variables/_color.scss
+++ b/src/assets/styles/variables/_color.scss
@@ -10,4 +10,7 @@
   --color-primary: var(--color-black);
   --color-secondary: var(--color-white);
   --color-highlight: var(--color-peter-river);
+
+  // Theme Background
+  --color-light-dark: var(--color-white); // defaults to light
 }
