intro theme calss to html, body

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -5,6 +5,7 @@ html, body {
   min-height: 100%;
   margin: 0;
   padding: 0;
+  background-color: var(--color-light-dark);
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
