update theme switch btn positioning

--- a/src/components/theme/themeMode.scss
+++ b/src/components/theme/themeMode.scss
@@ -1,7 +1,7 @@
 @import '@/assets/styles/variables/_color.scss';
 
 .switch {
-  position: absolute;
+  position: fixed;
   display: inline-block;
   width: 90px;
   height: 34px;
