add css styling

--- a/src/components/RecipeForm/RecipeForm.scss
+++ b/src/components/RecipeForm/RecipeForm.scss
@@ -15,3 +15,11 @@
     }
   }
 }
+
+.recipe-result-wrapper {
+  text-align: center;
+  background-color: var(--color-highlight);
+  color: var(--color-white);
+  margin-top: 25px;
+  border: 1px solid;
+}
