store view round up

--- a/src/components/Store/Store.scss
+++ b/src/components/Store/Store.scss
@@ -25,4 +25,10 @@
     padding: 0;
     color: var(--color-dark-gray);
   }
+
+  &__textCenter {
+    text-align: center;
+    color: var(--color-dark-gray);
+  }
+
 }
