update scss for landing screen component

--- a/src/components/LandingScreen/LandingScreen.scss
+++ b/src/components/LandingScreen/LandingScreen.scss
@@ -3,7 +3,7 @@
   width: 100%;
   margin: 0 auto;
 
-    td, .landing_table th {
+    td, th {
       border: 1px solid #ddd;
       padding: 8px;
     }
